2.9.9: (CSS) styling more popups and dialogs, now that bug 1733569 introduced automatic dark mode negotiation for native appearances of xul elements and titlebars. I previously left some dialogs unstyled (like unknown content type download) because they had so little internal CSS, and the titlebars were always white on windows, even if you had windows dark mode enabled. if I styled them back then there'd be extreme ugly contrast between the dialog's body and its titlebar. now that titlebars will adapt to ui.systemUsesDarkTheme, it makes sense to style these dialogs. so with this latest update, there isn't much left that isn't dark indigo throughout the entire firefox UI.

--- a/uc-globals.css
+++ b/uc-globals.css
@@ -82,6 +82,7 @@ tooltip {
     --menu-right-size: 14px;
     --menu-separator-margin: 4px;
 
+    --uc-font-weight-extrabold: 700;
     --uc-font-weight-bold: 600;
     --uc-font-weight-semibold: 500;
     --uc-font-weight-thin: 400;
