--- a/uc-misc.css
+++ b/uc-misc.css
@@ -297,12 +297,6 @@ progress[paused]::-moz-progress-bar {
     -moz-box-align: center !important;
 }
 
-#fullscreen-warning {
-    background-color: var(--acrylic-blue) !important;
-    background-image: var(--acrylic-texture) !important;
-    backdrop-filter: var(--acrylic-blur) !important;
-}
-
 /* hide keyword fixup notification */
 notification[value="keyword-uri-fixup"] {
     display: none !important;
@@ -430,7 +424,8 @@ toolbar:not(#PersonalToolbar) .toolbarbutton-1:focus-visible > .toolbarbutton-ba
         panelview,
         #BMB_bookmarksPopup,
         #main-menubar,
-        .sidebar-search-container {
+        .sidebar-search-container,
+        .pointerlockfswarning {
             font-family: SF Pro Text, Segoe UI, sans-serif !important;
             font-kerning: normal !important;
         }
@@ -522,6 +517,19 @@ toolbar:not(#PersonalToolbar) .toolbarbutton-1:focus-visible > .toolbarbutton-ba
         panel[type="autocomplete-richlistbox"] > richlistbox > richlistitem {
             font-family: SF Pro Text, Segoe UI, sans-serif !important;
             font-kerning: normal !important;
+        }
+
+        .pointerlockfswarning-domain-text,
+        .pointerlockfswarning-generic-text {
+            font-weight: var(--uc-font-weight-thin, 300) !important;
+        }
+
+        .pointerlockfswarning-domain {
+            font-weight: var(--uc-font-weight-bold, 400) !important;
+        }
+
+        .dialog-button-box button {
+            font-family: SF Pro Text, Segoe UI, sans-serif !important;
         }
 
         @-moz-document url-prefix("chrome://browser/content/syncedtabs/sidebar.xhtml")
